compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__guard_float_int_eq_vars.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 440
expression: "let x = 1.0 let y = 1 case x { _ if x == y -> 1 }"
snapshot_kind: text
---
----- SOURCE CODE
let x = 1.0 let y = 1 case x { _ if x == y -> 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:37
  │
1 │ let x = 1.0 let y = 1 case x { _ if x == y -> 1 }
  │                                     ^^^^^^

Expected type:

    Float

Found type:

    Int
